microservices-banking/k8s/dev/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ci-cd-ingress
  annotations:
    kubernetes.io/ingress.class: 'nginx'
  labels:
    name: ci-cd-ingress
spec:
  rules:
    - host: homo.ci-cd-example.com
      http: 
        paths:
          - pathType: Prefix
            path: /ci-cd
            backend:
              service:
                name: ci-cd-service
                port:
                  number: 3000
